# csp-adapter-symphony

./: .bumpversion.cfg  .copier-answers.yaml  .gitignore  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  wiki.yaml
csp_adapter_symphony/: __init__.py  adapter.py  adapter_config.py  mention.py  message.py
csp_adapter_symphony/examples/: hello.py
csp_adapter_symphony/tests/: conftest.py  symphony_csp_e2e.py  test_adapter.py
csp_adapter_symphony/tests/v1/: symphony_csp_e2e.py  test_adapter.py
csp_adapter_symphony/v1/: __init__.py  adapter.py
csp_adapter_symphony/v1/examples/: hello.py
docs/wiki/: API-Reference.md  Build-from-Source.md  Contribute.md  Examples.md  Home.md  Installation.md  Local-Development-Setup.md  Setup.md  _Footer.md
docs/wiki/contribute/: Build-from-Source.md
