[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "csp-adapter-symphony"
authors = [
    {name = "Point72, L.P.", email = "CSPOpenSource@point72.com"},
]
description = "A csp adapter for symphony"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.3.1"
requires-python = ">=3.10"
keywords = [
    "csp",
    "stream-processing",
    "symphony",
    "chat",
    "chatbot",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "csp",
    "pydantic>=2",
    "requests",
    "tenacity",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-dist",
    "codespell",
    "hatchling",
    "mdformat",
    "mdformat-tables>=1",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "ty",
    "uv",
    "wheel",
]

[project.scripts]

[project.urls]
Repository = "https://github.com/Point72/csp-adapter-symphony"
Homepage = "https://github.com/Point72/csp-adapter-symphony"

[tool.bumpversion]
current_version = "0.3.1"
commit = true
tag = true
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "csp_adapter_symphony/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.coverage.run]
branch = true
omit = [
    "csp_adapter_symphony/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 75

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = [
    "csp_adapter_symphony",
]

[tool.hatch.build.targets.wheel]
packages = [
    "csp_adapter_symphony",
]

[tool.hatch.build.targets.wheel.shared-data]

[tool.pytest.ini_options]
addopts = [
    "-vvv",
    "--junitxml=junit.xml",
]
testpaths = "csp_adapter_symphony/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = [
    "I",
]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = [
    "csp_adapter_symphony",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "F403",
]
